--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@
 *.tar.gz
 *.rar
 
-server/Host.java
+src/server/Host.java
 .idea
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
